alignment fixed in mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -611,6 +611,21 @@ footer .container {
     grid-template-rows: 1fr;
 
   }
+
+  .card {
+    width: 100%;
+  }
+
+  .about-text {
+    width: 100%;
+    margin-bottom: 2rem;
+  }
+
+  .overview-about img {
+    width: 100%;
+    /* max-width: 320px; */
+    margin: auto;
+  }
 }
 
 /**
@@ -773,10 +788,6 @@ footer .container {
     width: 170%;
   }
 
-  /* .features-title {
-    margin-left: -27rem;
-  } */
-
   /**
    * BLOG
    */
@@ -859,12 +870,13 @@ footer .container {
 
   .hero-content {
     width: 50%;
+    margin-top: -10rem;
   }
 
   .hero-banner {
     position: absolute;
     top: 50%;
-    right: -100px;
+    right: -20px;
     transform: translateY(-50%);
     background: url("../images/hero.png") no-repeat;
     background-size: contain;
@@ -893,9 +905,17 @@ footer .container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
-    margin: auto;
-    justify-content: center;
-    align-items: center;
+    margin-left: 5rem;
+  }
+
+  .about-grid {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+
+  }
+
+  .card {
+    width: 400px;
   }
 
   /**
@@ -918,16 +938,16 @@ footer .container {
   }
 
   /**
-   * BLOG
+   * ABOUT
    */
 
-  .blog-list {
-    grid-template-columns: repeat(3, 1fr);
-  }
+.about {
+  margin-left: -5rem;
+}
 
-  .blog-banner {
-    height: 200px;
-  }
+.about-text {
+  width: 100%;
+}
 
   /**
    * FOOTER
@@ -985,6 +1005,13 @@ footer .container {
   .hero-banner {
     top: 55%;
     right: -50px;
+  }
+
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    margin-left: 10rem;
   }
 
   /**
